# SliceRecon

./: .gitmodules  CMakeLists.txt  README.md  build_environment.yml  from_flex_to_slicer.py  setup.py
doc/: conventions.md
example/: slicerecon_plugin.py  slicerecon_server.cpp
examples/: fake_publisher.py  fbp_example_slicerecon.py  from_flex_to_slicer.py  from_tomcat_to_slicer.py  live_recon.py  mandarin_skull_reco.py  rat_skull_reco.py  slicer_needles_test.py
include/slicerecon/reconstruction/: reconstructor.hpp
include/slicerecon/util/: data_types.hpp
slicerecon/: __init__.py  transforms.py  util.py
slicerecon/cpp/: field_log_filter.cpp
src/reconstruction/: reconstructor.cpp
